<resources>
    <string name="app_name">MAFIA43</string>

    <string name="app_name_stretched">M A F I A 4 3</string>
    <string name="htp_title">How To Play</string>
    <string name="status_update">Sequence</string>

    <string name="restart">Restart Game</string>

    <string name="day">D A Y</string>
    <string name="vote">Voting Action</string>

    <string name="night">N I G H T</string>
    <string name="night_role">Role Action</string>
    <string name="night_selection">Who?</string>

    <string name="game">G A M E</string>
    <string name="over">O V E R</string>

    <string name="voting">VOTING</string>
    <!-- This string will have to be dynamic as days change -->
    <string name="day_num">DAY 1</string>
    <string name="vote_selection">Select who the group has decided to vote off:</string>
    <string name="confirm_vote">CONFIRM</string>
    <string name="skip_vote">SKIP VOTE</string>

    <!-- Description of UI images -->
    <string name="divider">divider</string>

    <!-- How to Play -->
    <string name="htp">A minimum of 5 players and a maximum of 15 is required to play.\n\nOne player will be assigned Mafia. Their goal is to kill all of the other players off without being caught.\n\nAnother player will be marked as Doctor. They are able to revive someone who has been killed by the Mafia, provided that they choose the correct person.\n\nAnother player will be assigned the Detective role. They may inspect one person per round and find out their role.\n\nAll other players will be assigned the Civilian role, and will leave their fate in the hands of either the Mafia or the Doctor.\n\nAfter a night is over, the Detective, Doctor, and Civilians will deliberate and vote someone off (or skip the vote if there is not enough evidence).\n\nKeep in mind that the Detective\'s ability is vital for the voting period, so choose wisely!\n\nIf the Mafia takes out enough people to leave only 1 civilian remaining, then Mafia wins. If the others figure out who the Mafia is before then and vote them off, Civilians win instead!</string>
</resources>