<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Background -->

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:text="" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/opensans_bold"
        android:text="@string/day"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05" />

    <!-- HDiV -->
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:src="@drawable/hdiv_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.09" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/opensans_bold"
        android:text="@string/vote"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="420dp"
        android:fontFamily="@font/opensans_semibold"
        android:text="@string/vote_selection"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.085"
        tools:text="@string/vote_selection" />

    <!-- This Nested Scroll view and the structure in it is necessary for
    the list of players to be scrollable. It must be structured like this with
    the android:fillViewPort attribute set to true in NestedScrollView
    and the LinearLayout parent of the ListView and the
    android:nestedScrolllingEnabled=true in ListView-->
    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll_players"
        android:layout_width="300dp"
        android:layout_height="280dp"
        app:layout_constraintBottom_toTopOf="@id/confirm_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        android:fillViewport="true"
        android:background="@drawable/border_dark">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <ListView
            android:id="@+id/player_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="MissingConstraints"
            android:nestedScrollingEnabled="true"
            android:choiceMode="singleChoice"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <Button
        android:id="@+id/confirm_button"
        android:layout_width="250dp"
        android:layout_height="80dp"
        android:layout_marginBottom="30dp"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/white"
        android:text="@string/confirm_vote"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scroll_players"
        tools:ignore="NotSibling" />

    <Button
        android:id="@+id/skip_button"
        android:layout_width="130dp"
        android:layout_height="30dp"
        android:layout_marginTop="30dp"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/white"
        android:text="@string/skip_vote"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.056"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirm_button"
        tools:ignore="MissingConstraints,NotSibling" />

    <TextView
        android:id="@+id/timer_text"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:textAlignment="textEnd"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.872"
        app:layout_constraintStart_toEndOf="@+id/skip_button"
        app:layout_constraintTop_toBottomOf="@+id/confirm_button">

    </TextView>


</androidx.constraintlayout.widget.ConstraintLayout>