<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Background -->

    <TextView
        android:id="@+id/nsTextView4"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark" />

    <TextView
        android:id="@+id/nsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/opensans_regular"
        android:text="@string/night"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/nsTextView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/night" />

    <ImageView
        android:id="@+id/nsImageView"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/nsTextView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nsTextView"
        app:layout_constraintVertical_bias="0.34"
        app:srcCompat="@drawable/hdiv_light" />

    <TextView
        android:id="@+id/nsTextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/opensans_bold"
        android:text="@string/night_role"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@id/nsTextView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nsTextView"
        tools:text="@string/night_role" />

    <TextView
        android:id="@+id/nsTextView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="420dp"
        android:fontFamily="@font/opensans_regular"
        android:text="@string/night_selection"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/nsTextView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nsTextView2"
        app:layout_constraintVertical_bias="0.085"
        tools:text="@string/night_selection" />

    <!-- This Nested Scroll view and the structure in it is necessary for
    the list of players to be scrollable. It must be structured like this with
    the android:fillViewPort attribute set to true in NestedScrollView
    and the LinearLayout parent of the ListView and the
    android:nestedScrolllingEnabled=true in ListView-->
    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll_players"
        android:layout_width="300dp"
        android:layout_height="280dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@id/confirm_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nsTextView3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ListView
                android:id="@+id/player_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:choiceMode="singleChoice"
                android:nestedScrollingEnabled="true"
                android:orientation="vertical"
                tools:ignore="MissingConstraints" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <Button
        android:id="@+id/confirm_button"
        android:layout_width="170dp"
        android:layout_height="70dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:background="@color/lightGrey"
        android:text="@string/confirm_vote"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scroll_players"
        tools:ignore="NotSibling" />


</androidx.constraintlayout.widget.ConstraintLayout>